--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,24 @@
   margin-top: 50px;
 }
 
+.chat-container {
+    width: '100%',
+    height: '100%',
+},
+
+.chat-box {
+    height: '300px',
+    overflowY: 'auto',
+    border: '1px solid #ccc',
+    padding: '10px',
+    backgroundColor: '#f9f9f9',
+},
+
+.message-list {
+    listStyleType: 'none',
+    padding: 0,
+}
+
 h1 {
   color: #282c34;
 }
@@ -12,4 +30,3 @@ p {
   font-size: 18px;
   color: #61dafb;
 }
-
