--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,13 +3,30 @@
   margin-top: 50px;
 }
 
+/* center the main, rendered chat box in the middle of the webpage */
+#root {
+  width: 50%;
+  max-width: 1200px;
+  margin: 0 auto;
+  font-size: 14px;
+  background-color: #f9f9f9;
+}
+
+/* left align the channel name to the chat box */
+#channel-name {
+  width: 50%;
+  max-width: 1200px;
+  margin: 20px auto;
+  text-align: left;
+}
+
 .chat-container {
     width: 100%;
     height: 100%;
 }
 
 .chat-box {
-    max-height: 200px;
+    max-height: 400px;
     overflow-y: auto;
     border: 1px solid #ccc;
     padding: 10px;
@@ -21,11 +38,11 @@
     padding: 0;
 }
 
-h1 {
-  color: #282c34;
+li {
+  margin: 5px 0 5px 0;
 }
 
 p {
   font-size: 18px;
-  color: #61dafb;
+  margin-left: 30px;
 }
